<resources>
    <string name="app_name">MazeMaster</string>
    <string name="login">Login</string>
    <string name="registro">Registre</string>
    <string name="correo">E-mail</string>
    <string name="nombre">Nom</string>
    <string name="pass">Contrasenya</string>
    <string name="fecha">Data</string>
    <string name="Registrar">REGISTRAR</string>
    <string name="correoLogin">E-mail</string>
    <string name="passLogin">Contrasenya</string>
    <string name="BtnLogin">ENTRAR</string>
    <string name="tancarSessio">Tancar Sessió</string>
    <string name="edatEt">Edat</string>
    <string name="poblacioEt">Població</string>

    <string name="miPuntuaciotxt">Puntuació</string>
    <string name="puntuacioMayus">PUNTUACIÓ</string>
    <string name="puntuacio"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo2"> -- </string>
    <string name="nom"> -- </string>
    <string name="MenuTxt">MENÚ</string>
    <string name="jugarBtn">Jugar</string>
    <string name="PuntuacionsBtn">Puntuacions</string>
    <string name="CreditsBtn">Crèdits</string>
    <string name="continuarBtn">Continuar</string>
    <string name="movimientos">MOVIMENTS</string>
    <string name="puntos">--</string>
    <string name="edat"> -- </string>
    <string name="poblacio"> -- </string>
    <string name="editarBtn">Canviar Imatge</string>
    <string name="cambiaPassBtn">Canviar Contrasenya</string>
    <string name="cambiar_contrasena_title">CANVIAR CONTRASENYA</string>
    <string name="cambiar_contrasena_message">Se li ha enviat un correu per canviar la contrasenya</string>
    <string name="boton_aceptar">Acceptar</string>
    <string name="cambiar_imatge_title">CANVIAR IMATGE</string>
    <string name="seleccionar_imatge_message">Seleccionar imatge de: </string>
    <string name="boton_galeria">Galeria</string>
    <string name="boton_camera">Càmera</string>
</resources>