<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEAFD"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- IMATGE -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/fireworks"
            android:src="@drawable/userimage" />

        <!-- ENTREM EL MAIL -->
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/correo" />
        <!-- forcem que la entrada sigui un correu electronic -->

        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass" />
        <!-- forcem que la entrada sigui un password -->


        <!-- ENTREM EL NOM DEL JUGADOR -->
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />

        <!-- ENTREM L'edat -->
        <EditText
            android:id="@+id/edatEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edatEt" />
        <!-- ENTREM LA POBLACIO -->
        <EditText
            android:id="@+id/poblacioEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/poblacioEt" />

        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/fecha"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botopropi"
            android:textColor="@color/white"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

</RelativeLayout>