<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FDDFFF"
    tools:context=".DetalleJugador">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Contenido dentro del CardView -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="557dp">


            <!-- Marco con color -->
            <TextView
                android:id="@+id/nomD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Juan" />

            <ImageView
                android:id="@+id/imageBorder"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#C21F55"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomD" />

            <!-- Imagen -->
            <ImageView
                android:id="@+id/imatgeD"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomD" />

            <TextView
                android:id="@+id/puntuacioLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/miPuntuaciotxt"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imatgeD"
                tools:text="@string/miPuntuaciotxt" />

            <TextView
                android:id="@+id/puntuacioD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#C21F55"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/puntuacioLabel"
                app:layout_constraintTop_toTopOf="@+id/puntuacioLabel"
                tools:text="17" />


            <TextView
                android:id="@+id/dataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/fecha"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/puntuacioD"
                tools:text="@string/fecha" />

            <TextView
                android:id="@+id/dataD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#C21F55"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/dataLabel"
                app:layout_constraintTop_toTopOf="@+id/dataLabel"
                tools:text="25" />

            <TextView
                android:id="@+id/edatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/edatEt"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataD"
                tools:text="@string/edatEt" />

            <TextView
                android:id="@+id/edatD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#C21F55"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/edatLabel"
                app:layout_constraintTop_toTopOf="@+id/edatLabel"
                tools:text="34" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/correo"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edatD"
                tools:text="@string/correo" />

            <TextView
                android:id="@+id/emailD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#C21F55"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/emailLabel"
                app:layout_constraintTop_toTopOf="@+id/emailLabel"
                tools:text="example@example.com" />


            <TextView
                android:id="@+id/poblacioLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/poblacioEt"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailD"
                tools:text="@string/poblacioEt" />

            <TextView
                android:id="@+id/poblacioD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#C21F55"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/poblacioLabel"
                app:layout_constraintTop_toTopOf="@+id/poblacioLabel"
                tools:text="Barcelona" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>